fix spacing in the hamburger meny

--- a/_sass/blog/_layout.scss
+++ b/_sass/blog/_layout.scss
@@ -90,14 +90,18 @@
       padding-bottom: 5px;
     }
 
+    .trigger {
+      padding-top: 20px;
+    }
     .page-link {
       display: block;
-      padding: 5px 10px;
+      padding: 10px 10px;
 
-      &:not(:last-child) {
-        margin-right: 0;
+      &:last-child {
+        margin-bottom: 10px;
       }
-      margin-left: 20px;
+      margin-right: 10px;
+      margin-left: 10px;
     }
   }
 }
